--- a/package.json
+++ b/package.json
@@ -2,22 +2,23 @@
   "name": "kindrid-prototype",
   "version": "1.0.0",
   "description": "Secure, AI-powered platform for sharing school photos and videos with full parental control",
-
   "main": "index.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --port $PORT",
-    "start": "npm run preview",
+    "start": "node server.js",
+    "railway-start": "NODE_ENV=production node server.js",
     "deploy": "npm run build && git add dist -f && git commit -m 'deploy' && git subtree push --prefix dist origin gh-pages",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "clsx": "^1.2.1",
+    "express": "^5.1.0",
+    "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
-    "lucide-react": "^0.263.1",
-    "clsx": "^1.2.1",
     "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
