--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "preview": "vite preview --port $PORT",
     "start": "node server.js",
-    "railway-start": "NODE_ENV=production node server.js",
+    "railway-start": "RAILWAY_STARTUP_DELAY=10000 NODE_ENV=production node server.js",
     "deploy": "npm run build && git add dist -f && git commit -m 'deploy' && git subtree push --prefix dist origin gh-pages",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
