--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "postbuild": "cp public/health.html dist/",
     "preview": "vite preview --port $PORT",
     "start": "node server.js",
     "railway-start": "NODE_ENV=production node server.js",
