--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "postbuild": "cp public/health.html dist/",
     "preview": "vite preview --port $PORT",
     "start": "node server.js",
-    "railway-start": "node start.js",
+    "railway-start": "NODE_ENV=production node minimal-server.js",
     "deploy": "npm run build && git add dist -f && git commit -m 'deploy' && git subtree push --prefix dist origin gh-pages",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
