--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "clsx": "^1.2.1",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -43,5 +43,8 @@
     "secure-sharing"
   ],
   "author": "Kindrid Team",
-  "license": "MIT"
+  "license": "MIT",
+  "engines": {
+    "node": ">=18.0.0"
+  }
 }
