--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kindrid-prototype",
   "version": "1.0.0",
-  "description": "Secure, AI-powered platform for sharing school photos and videos with full parental control",
+  "description": "Secure, AI-powered platform for sharing school photos and videos with full parental control - Railway deployment ready",
   "main": "index.js",
   "scripts": {
     "dev": "vite",
